# camara-abierta-backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  Dockerfile.lambda  README.md  alembic.ini  bcn_parliamentary_data_spec.md  db.py  docker-compose.yml  justfile  main.py  pyproject.toml  requirements.txt  schemas.py
.claude/: launch.json
.github/workflows/: deploy.yml
app/: __init__.py  admin.py  cli.py  main.py
app/api/: __init__.py  router.py
app/core/: __init__.py  celery_app.py  celery_beat.py  config.py  database.py  dispatch.py  search.py  secrets.py  session.py
app/geography/: __init__.py  dataset.py  loader.py
app/ingestors/: __init__.py
app/lambdas/: __init__.py  api.py  jobs.py  llm.py  migrate.py
app/models/: __init__.py  base.py  core.py  diario_oficial.py  enums.py  ingestor_state.py  legislature.py  proyecto.py  sync.py  votacion.py
app/schemas/: __init__.py  calendar.py  common.py  dashboard.py  diario_oficial.py  legislators.py  proyectos.py  reference.py  reglamentos.py  sync.py  voting.py
app/scrapers/: __init__.py  camara_diputados.py  cgr_reglamentos.py  common.py  diario_oficial.py
app/search/: bills.py  client.py
app/services/: __init__.py  bill_summary_backfill.py  calendar.py  dashboard.py  diario_oficial.py  health.py  legislator_stats.py  legislators.py  llm.py  notifications.py  pdf.py  proyectos.py  reglamentos.py  revalidate.py  sync.py  voting.py  voting_signals.py  write.py
app/tasks/: __init__.py  base.py  bills.py  committees.py  ingestors.py  legislators.py  legislature.py  normas.py  reference.py  reglamentos.py  scrapers.py  voting.py
docs/: ingest_bills_optimizations.md  llm-lambda-hang-investigation.md  v0.1-plan.md
docs/adr/: 0001-opendata-as-party-source-of-truth.md  0002-senado-web-json-as-senator-roster-source.md  0003-scrape-camara-for-deputy-district.md  0004-versioned-geography-baseline.md  0005-bcn-as-senator-roster-source.md  0006-bloc-affiliation-temporal-model.md  0007-inferred-bloc-lean-is-a-computed-signal.md  0008-bills-discovery-via-opendata-year-scan.md  0009-restsil-as-bills-and-senate-vote-source.md  0010-chamber-vote-bulk-via-opendata.md  0011-bcn-rest-as-active-roster-source.md  0012-legislator-ingest-pipeline.md  0013-bill-and-vote-ingest-pipeline.md  0014-bloc-affiliation-and-inferred-lean.md  0015-legislator-identity-and-temporal-terms.md  0016-three-tier-legislature-model.md  0017-calendar-events-editorial-layer.md  0018-honest-no-vote-choice.md  0019-bills-ai-summary-layered.md  0020-restsil-as-bill-detail-source.md  0021-llm-curated-bill-topics.md  0022-aws-serverless-deployment.md
infra/: README.md  app.py  cdk.context.json  cdk.json  cicd_stack.py  compute_stack.py  network_stack.py  requirements.txt
migrations/: env.py
migrations/versions/: 0081d8d054bf_initial_schema.py  05d02404c207_backfill_orphan_calendar_event_bill_id.py  09faab471ffb_initial_schema.py  1515b6728c24_initial_schema.py  1a20f5f617f7_initial_schema.py  1fa801e8ad6b_initial_schema.py  2b95ff1dcef2_initial_schema.py  3887b14b69b5_initial_schema.py  3cea8a7c3e9b_initial_schema.py  (+21 more)
scripts/: clone_db_to_local.sh  recreate_db.py  seed_blocs.py  seed_topics.py
tests/: conftest.py  test_api_routes.py  test_bcn_client.py  test_bcn_rest_client.py  test_bill_summary_backfill.py  test_bill_tasks.py  test_bloc.py  test_camara_scraper.py  test_deploy.py  test_geography_dataset.py  test_geography_loader.py  test_health.py  test_ingestors.py  test_ingestors_restsil_detail.py  test_legislator_stats.py  test_parsers.py  test_pdf.py  test_search_helpers.py  test_tabla_semanal_parser.py  test_voting_service.py  test_voting_signals.py  test_write.py
(+50 files in other folders)
