[project]
name = "camara-abierta-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.15,<2",
    "camoufox[geoip]>=0.4,<1",
    "celery[redis]>=5.4,<6",
    "defusedxml>=0.7,<1",
    "elasticsearch>=8,<9",
    "fastapi>=0.115,<1",
    "google-genai>=1.0,<2",
    "httpx>=0.27,<1",
    "itsdangerous>=2.2,<3",
    "pdfplumber>=0.11,<1",
    "playwright>=1.44,<2",
    "playwright-stealth>=1.0,<2",
    "psycopg2-binary>=2.9,<3",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "redis>=5,<6",
    "resend>=2.0,<3",
    "sqladmin>=0.20,<1",
    "sqlalchemy>=2,<3",
    "tenacity>=8,<10",
    "uvicorn[standard]>=0.34,<1",
]

