[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "camara-abierta-backend"
version = "0.1.0"
description = "Camara Abierta backend for Chilean legislative transparency data"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy>=2,<3",
    "alembic>=1.15,<2",
    "psycopg2-binary>=2.9,<3",
    "celery[redis]>=5.4,<6",
    "redis>=5,<6",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "sqladmin>=0.20,<1",
    "itsdangerous>=2.2,<3",
    "httpx>=0.27,<1",
    "tenacity>=8,<10",
    "defusedxml>=0.7,<1",
    "google-genai>=1.0,<2",
    "resend>=2.0,<3",
    "pdfplumber>=0.11,<1",
    "playwright>=1.44,<2",
    "playwright-stealth>=1.0,<2",
    "camoufox[geoip]>=0.4,<1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
    "ty>=0.0.40",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = ["migrations/"]


[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
exclude = ["tests/"]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]

