[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "camara-abierta-backend"
version = "0.1.0"
description = "Camara Abierta backend for Chilean legislative transparency data"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy>=2,<3",
    "alembic>=1.15,<2",
    "psycopg2-binary>=2.9,<3",
    "celery[redis]>=5.4,<6",
    "redis>=5,<6",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "sqladmin>=0.20,<1",
    "itsdangerous>=2.2,<3",
    "httpx>=0.27,<1",
    "tenacity>=8,<10",
    "defusedxml>=0.7,<1",
    "google-genai>=1.0,<2",
    "anthropic>=0.40,<1",
    "resend>=2.0,<3",
    "pdfplumber>=0.11,<1",
    "mangum>=0.21.0",
    "boto3>=1.43.39",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
    "ty>=0.0.40",
]
# Browser-driven scrapers (diario_oficial / cgr_reglamentos). Descoped from the
# deployed Lambda image (ADR-0022) — kept as a default group so local dev and the
# scraper CLIs still get them via `uv sync`, but Dockerfile.lambda excludes them
# with `--no-group scrapers` to keep the image lean and cp314-resolvable.
scrapers = [
    "playwright>=1.44,<2",
    "playwright-stealth>=1.0,<2",
]

[tool.uv]
default-groups = ["dev", "scrapers"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = ["migrations/"]


[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
exclude = ["tests/"]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]

